# pizza-store-backend2

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt
dbschema/: auth.esdl  orders.esdl  products.esdl
pizza_store/: settings.py  utils.py
pizza_store/adapters/app/: app.py  dependencies.py
pizza_store/adapters/app/routes/: auth.py  categories.py  orders.py  product_variants.py  products.py  root.py
pizza_store/adapters/db/: client.py
pizza_store/adapters/db/repos/: auth.py  orders.py  products.py
pizza_store/entities/: orders.py  products.py
pizza_store/services/auth/: exceptions.py  interfaces.py  models.py  service.py
pizza_store/services/orders/: exceptions.py  interfaces.py  models.py  service.py
pizza_store/services/products/: exceptions.py  interfaces.py  models.py  service.py
tests/: test_order.py
