[tool.poetry]
name = "pizza-store-backend"
version = "0.1.0"
description = ""
authors = ["astsu <astsu.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
edgedb = "^0.23.0"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"
bcrypt = "^3.2.0"
PyJWT = "^2.3.0"
python-dotenv = "^0.20.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
